Clean up Money plugin, fix button alignment

--- a/frontend/styles/_pages.scss
+++ b/frontend/styles/_pages.scss
@@ -174,6 +174,10 @@ body.product_line, body.product, body.world_flute {
     }
   }
 
+  p > .button.large:first-child {
+    margin-left: 0;
+  }
+
   .button.snipcart-add-item {
     transition: all 0.2s ease-out;
 
